--- a/Customers/package.json
+++ b/Customers/package.json
@@ -19,6 +19,10 @@
     "three": "^0.179.1",
     "web-vitals": "^2.1.4"
   },
+  "overrides": {
+    "postcss": "8.5.6",
+    "nth-check": "2.1.1"
+  },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
@@ -48,7 +52,6 @@
   "devDependencies": {
     "autoprefixer": "^10.4.21",
     "gh-pages": "^6.3.0",
-    "postcss": "^8.5.6",
     "tailwindcss": "^3.4.13"
   }
 }
